LazyLoad: Support recording frame metrics when LazyLoad setting is off.

Allow recording lazy load visible load time metrics for frames when the
LazyLoad setting is off, so long as frame visible load time metrics
recording is enabled. Instead, only gate the actual lazy loading of
frames on the value of Settings::GetLazyLoadEnabled().

Bug: 919747
Change-Id: I7b5d5fff234a3ae0c49d2c6670da2689777adcdf
Reviewed-on: https://chromium-review.googlesource.com/c/1400341
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Scott Little <sclittle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621314}
Former-commit-id: f250759e217507fbffa46428884fe51336a80e03